--- a/circle.yml
+++ b/circle.yml
@@ -13,4 +13,4 @@ deployment:
     commands:
       - wget -q https://github.com/aktau/github-release/releases/download/v0.6.2/linux-amd64-github-release.tar.bz2
       - tar jxvf linux-amd64-github-release.tar.bz2
-      - linux-amd64-github-release/bin/linux/amd64/github-release --user yuya-oc --repo test-github --tag $CIRCLE_BRANCH --name main.tar.gz --file $CIRCLE_ARTIFACTS/main.tar.gz
+      - ./bin/linux/amd64/github-release --user yuya-oc --repo test-github --tag $CIRCLE_BRANCH --name main.tar.gz --file $CIRCLE_ARTIFACTS/main.tar.gz
